# qd_grasp_6dof

./: .gitignore  README.md  evolutionary_process.py  open_pkl.py  requirements.txt  run.py  run_qd_grasp.py  setup.py  test_shadow_hand_adduction.py
algorithms/: evaluate.py  population.py  pyribs_qd_interface.py
algorithms/archives/: archive.py  dummy_archive.py  elite_structured_archive.py  novelty_archive.py  outcome_archive.py  structured_archive.py  unstructured_archive.py
algorithms/evaluation/: grasp_strategies_routines.py
algorithms/stats/: stats_tracker.py
configs/: eval_config.py  exec_config.py  qd_config.py
environments/3d_models/robots/allegro_hand/allegro_hand_description/: package.xml
environments/3d_models/robots/allegro_hand/allegro_hand_description/launch/: allegro_viz.launch
environments/3d_models/robots/allegro_hand/allegro_hand_description/urdf/: allegro_hand_description.xacro
environments/3d_models/robots/allegro_hand/allegro_hand_description/worlds/: allegro.world
environments/src/: env_constants.py  genome_to_6dof_poses.py  robot_grasping.py  robot_grasping_debug.py  search_space_bb_processor.py
finger_locking_experiment_2/: summary.txt
finger_locking_experiment_2/test_lock_index0/: config.pkl  data_export.pkl  run_data.npz  run_infos.yaml  (+1 more)
launchers/: cleaner.sh  exec_debug.sh
utils/: args_processor.py  common_tools.py  evo_proc_routines.py  io_run_data.py  novelty_computation.py  progression_monitoring.py  timer.py
visualization/: plot_success_archive_heatmap.py  plotting.py  replay_grasps.py  vis_tools.py
(+127 files in other folders)
