<?xml version="1.0"?>
<package>
    <name>allegro_hand_description</name>
    <version>0.0.0</version>
    <description>Allegro hand models.</description>

    <maintainer email="etienne.arlaud@inria.fr">EtienneAr</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>joint_state_publisher_gui</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>rviz</run_depend>
    <run_depend>xacro</run_depend>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>
        <!-- Other tools can request additional information be placed here -->
</package>
